--- a/components/ky1x5zd6m-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/ky1x5zd6m-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ky1x5zd6m-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-bd42eec9e9.et7h.p3.openshiftapps.com/rhtap/rhtap-qe:eb5952bc47430b4e0704814c1d4443631181a3da@sha256:a9dd51b0fa921f3a9c78701289b06c8065152ff055dfb5382d39116ae50da178
+          name: container-image
